[project]
name = "video-search"
version = "0.1.0"
description = "Video search pipeline with natural language queries using multimodal embeddings"
authors = [
    {name = "Gustav von Zitzewitz", email = "gustav.vonzitzewitz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "scenedetect[opencv]>=0.6.3",
    "qdrant-client>=1.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E702",  # multiple statements on one line (semicolon) - allow for compact code
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true 